// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuTextButton /> when an icon is passed with iconSize passes an icon method to fabric that returns an Icon with the passed size 1`] = `
<Reply
  size="12"
/>
`;

exports[`<MenuTextButton /> when an icon is passed without iconSize passes an icon method to fabric that returns an Icon with a default size of LARGE 1`] = `
<Reply
  size="16"
/>
`;

exports[`<MenuTextButton /> with additional classnames matches its snapshot 1`] = `
<CustomizedActionButton
  ariaLabel="testAria"
  className="yj-menu-text-button yj-menu-text-button--16 TEST-ADDITIONAL-CLASSNAME"
  menuProps={
    Object {
      "calloutProps": Object {
        "className": "yj-menu-text-button--callout",
      },
      "contextualMenuItemAs": [Function],
      "items": Array [
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 0,
          "key": "test1",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 2,
          "key": "test2",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test3",
          "name": "test",
          "onClick": undefined,
          "target": "_blank",
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test4",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
      ],
    }
  }
  onRenderIcon={[Function]}
  onRenderMenuIcon={[Function]}
  styles={
    Object {
      "root": Object {
        "borderColor": "#dde0e6",
        "borderRadius": 2,
        "boxShadow": "rgba(0, 0, 0, 0.05) 0px 1px 1px 0px",
        "color": "#386cbb",
        "fontSize": 14,
        "fontWeight": 600,
        "height": 36,
        "padding": 15,
      },
      "rootHovered": Object {
        "borderColor": "#9ac3ff",
      },
    }
  }
/>
`;

exports[`<MenuTextButton /> with all props matches its snapshot 1`] = `
<CustomizedActionButton
  ariaLabel="testAria"
  className="yj-menu-text-button yj-menu-text-button--16 TEST-ADDITIONAL-CLASSNAME"
  menuProps={
    Object {
      "calloutProps": Object {
        "className": "yj-menu-text-button--callout",
      },
      "contextualMenuItemAs": [Function],
      "items": Array [
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 0,
          "key": "test1",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 2,
          "key": "test2",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test3",
          "name": "test",
          "onClick": undefined,
          "target": "_blank",
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test4",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
      ],
    }
  }
  onRenderIcon={[Function]}
  onRenderMenuIcon={[Function]}
  styles={
    Object {
      "root": Object {
        "borderColor": "#dde0e6",
        "borderRadius": 2,
        "boxShadow": "rgba(0, 0, 0, 0.05) 0px 1px 1px 0px",
        "color": "#386cbb",
        "fontSize": 14,
        "fontWeight": 600,
        "height": 36,
        "padding": 15,
      },
      "rootHovered": Object {
        "borderColor": "#9ac3ff",
      },
    }
  }
/>
`;

exports[`<MenuTextButton /> with default options matches its snapshot 1`] = `
<CustomizedActionButton
  ariaLabel="testAria"
  className="yj-menu-text-button yj-menu-text-button--16"
  menuProps={
    Object {
      "calloutProps": Object {
        "className": "yj-menu-text-button--callout",
      },
      "contextualMenuItemAs": [Function],
      "items": Array [
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 0,
          "key": "test1",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": undefined,
          "itemType": 2,
          "key": "test2",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test3",
          "name": "test",
          "onClick": undefined,
          "target": "_blank",
        },
        Object {
          "data": Object {
            "yamUIIcon": undefined,
          },
          "disabled": undefined,
          "href": "http://bing.com",
          "itemType": undefined,
          "key": "test4",
          "name": "test",
          "onClick": undefined,
          "target": undefined,
        },
      ],
    }
  }
  onRenderIcon={[Function]}
  onRenderMenuIcon={[Function]}
  styles={
    Object {
      "root": Object {
        "borderColor": "#dde0e6",
        "borderRadius": 2,
        "boxShadow": "rgba(0, 0, 0, 0.05) 0px 1px 1px 0px",
        "color": "#386cbb",
        "fontSize": 14,
        "fontWeight": 600,
        "height": 36,
        "padding": 15,
      },
      "rootHovered": Object {
        "borderColor": "#9ac3ff",
      },
    }
  }
/>
`;

exports[`<MenuTextButton /> with default options passes a menu icon method to fabric that returns null to replace the chevron down icon 1`] = `null`;

exports[`<MenuTextButton /> with default options passes an icon method to fabric that defaults to the More icon with size large 1`] = `
<More
  size="16"
/>
`;

exports[`<MenuTextButton /> with default options passes contextualMenuItemAs method to fabric that returns a MenuTextButtonItem 1`] = `
<MenuTextButtonItem
  classNames={
    Object {
      "checkmarkIcon": "checkmarkIcon",
      "divider": "divider",
      "icon": "icon",
      "item": "item",
      "label": "label",
      "linkContent": "linkContent",
      "linkContentMenu": "linkContentMenu",
      "root": "root",
      "secondaryText": "secondaryText",
      "splitContainer": "splitContainer",
      "splitMenu": "splitMenu",
      "splitPrimary": "splitPrimary",
      "subMenuIcon": "subMenuIcon",
    }
  }
  hasIcons={false}
  index={0}
  item={
    Object {
      "key": "test1",
      "name": "test",
    }
  }
/>
`;
